namespace Mobishare.Core.Enums
{
    /// <summary>
    /// Tipologie di mezzi disponibili nel sistema di sharing
    /// </summary>
    public enum TipoMezzo
    {
        /// <summary>
        /// Bicicletta tradizionale senza motore elettrico
        /// </summary>
        BiciMuscolare,

        /// <summary>
        /// Bicicletta con assistenza elettrica
        /// </summary>
        BiciElettrica,

        /// <summary>
        /// Monopattino elettrico
        /// </summary>
        MonopattinoElettrico
    }
}