@startuml Mobishare_Domain_Model

!define ENTITY_COLOR #FFE6CC
!define ENUM_COLOR #FCE4EC

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

title Mobishare - Diagramma delle Classi del Dominio

' ========================================
' ENTITÀ DEL DOMINIO
' ========================================

class Utente <<Entity>> ENTITY_COLOR {
  - Id: int
  - Nome: string
  - Cognome: string
  - Email: string
  - Password: string
  - Ruolo: UserRole
  - Credito: decimal
  - DebitoResiduo: decimal
  - Sospeso: bool
  - PuntiBonus: int
}

class Mezzo <<Entity>> ENTITY_COLOR {
  - Id: int
  - Matricola: string
  - Tipo: TipoMezzo
  - Stato: StatoMezzo
  - LivelloBatteria: int?
  - MotivoNonPrelevabile: MotivoNonPrelevabile
  - RowVersion: byte[]
}

class Parcheggio <<Entity>> ENTITY_COLOR {
  - Id: int
  - Nome: string
  - Zona: string
  - Indirizzo: string?
  - Capienza: int
  - Attivo: bool
}

class Corsa <<Entity>> ENTITY_COLOR {
  - Id: int
  - Stato: StatoCorsa
  - DataOraInizio: DateTime
  - DataOraFine: DateTime?
  - CostoFinale: decimal?
  - SegnalazioneProblema: bool
  - RowVersion: byte[]
}

class Ricarica <<Entity>> ENTITY_COLOR {
  - Id: int
  - Importo: decimal
  - Data: DateTime
  - Stato: StatoRicarica
  - MetodoPagamento: string
}

class Pagamento <<Entity>> ENTITY_COLOR {
  - Id: int
  - Importo: decimal
  - Tipo: TipoPagamento
  - Data: DateTime
  - Stato: StatoPagamento
}

class Feedback <<Entity>> ENTITY_COLOR {
  - Id: int
  - Voto: int
  - Commento: string?
  - Data: DateTime
}

' ========================================
' ENUMERAZIONI
' ========================================

enum UserRole <<Enumeration>> ENUM_COLOR {
  Utente
  Gestore
}

enum TipoMezzo <<Enumeration>> ENUM_COLOR {
  BiciMuscolare
  BiciElettrica
  MonopattinoElettrico
}

enum StatoMezzo <<Enumeration>> ENUM_COLOR {
  Disponibile
  InUso
  NonPrelevabile
  Manutenzione
}

enum MotivoNonPrelevabile <<Enumeration>> ENUM_COLOR {
  Nessuno
  Guasto
  BatteriaScarica
  Manutenzione
}

enum StatoCorsa <<Enumeration>> ENUM_COLOR {
  InCorso
  Completata
  Annullata
}

enum StatoRicarica <<Enumeration>> ENUM_COLOR {
  InAttesa
  Completata
  Fallita
}

enum StatoPagamento <<Enumeration>> ENUM_COLOR {
  InAttesa
  Completato
  Fallito
}

enum TipoPagamento <<Enumeration>> ENUM_COLOR {
  Credito
  Debito
}

' ========================================
' RELAZIONI TRA ENTITÀ
' ========================================

' Relazioni Utente
Utente "1" -- "0..*" Corsa : effettua >
Utente "1" -- "0..*" Ricarica : effettua >
Utente "1" -- "0..*" Pagamento : effettua >
Utente "1" -- "0..*" Feedback : invia >

' Relazioni Mezzo
Mezzo "1" -- "0..*" Corsa : utilizzato in >
Mezzo "*" -- "1" Parcheggio : parcheggiato in >

' Relazioni Corsa
Corsa "*" -- "1" Parcheggio : inizia da >
Corsa "*" -- "0..1" Parcheggio : termina in >
Corsa "0..1" -- "0..1" Pagamento : genera >

' Relazioni con Enumerazioni
Utente --> UserRole
Mezzo --> TipoMezzo
Mezzo --> StatoMezzo
Mezzo --> MotivoNonPrelevabile
Corsa --> StatoCorsa
Ricarica --> StatoRicarica
Pagamento --> StatoPagamento
Pagamento --> TipoPagamento

' ========================================
' ANNOTAZIONI
' ========================================

note top of Utente
  **Utente della piattaforma**
  • Può essere "Utente" o "Gestore"
  • Gestisce credito e debiti
  • Sistema punti bonus per ricompense
  • Può essere sospeso per debiti
end note

note top of Mezzo
  **Veicolo condiviso**
  • Tipi: Bici Muscolare, Bici Elettrica, Monopattino
  • Stati: Disponibile, In Uso, Non Prelevabile, Manutenzione
  • I mezzi elettrici hanno livello batteria
  • Concorrenza gestita con RowVersion
end note

note top of Parcheggio
  **Area di sosta**
  • Capienza fissa
  • Può essere attivato/disattivato
  • Zona geografica di appartenenza
end note

note right of Corsa
  **Noleggio di un mezzo**
  • Una corsa attiva per utente
  • Prelievo da un parcheggio
  • Rilascio opzionale in altro parcheggio
  • Calcolo automatico del costo
  • Possibilità di segnalare problemi
  • Concorrenza gestita con RowVersion
end note

note bottom of Ricarica
  **Ricarica credito utente**
  • Importo aggiunto al credito
  • Gestione stati: In Attesa, Completata, Fallita
  • Supporta diversi metodi di pagamento
end note

note bottom of Pagamento
  **Transazione finanziaria**
  • Tipo: Credito (ricarica) o Debito (corsa)
  • Associato opzionalmente a una corsa
  • Stato tracciato per conferma
end note

note bottom of Feedback
  **Valutazione servizio**
  • Voto da 1 a 5 stelle
  • Commento testuale opzionale
  • Tracciabilità temporale
end note

' ========================================
' VINCOLI E REGOLE DI BUSINESS
' ========================================

note as BusinessRules
  **Vincoli e Regole di Business**
  
  1. **Un utente può avere al massimo una corsa attiva**
  2. **Un mezzo in uso non può essere prenotato da altri**
  3. **Credito insufficiente → utente sospeso**
  4. **Batteria < 20% → mezzo non prelevabile**
  5. **Parcheggio pieno → rilascio non consentito**
  6. **Corsa senza fine dopo 24h → chiusura automatica**
  7. **Sistema punti bonus**: ogni 10 corse completate → sconto
end note

@enduml
